# new-SkillControl

./: .gitignore  README.md  publish-release.js
ai归档/: LOGIC_BASE.md  指令5.md  指令6.md  指令7.md
ai归档/核心规则/: rules.md
ai归档/编年体记忆/: Summarize.md  memory.md
my-brain/: config.json
releases/: new-SkillControl_0.1.0_x64.msi
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  uninstall.nsh
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.css  index.html  index.js
