[package]
name = "new-skillcontrol"
version = "0.1.4"
description = "AI Agent Skill Manager"
authors = ["Antigravity"]
edition = "2021"

[lib]
name = "skill_manager_lib"
crate-type = ["lib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = { version = "2.0", default-features = false, features = ["deflate"] }
home = "0.5"
walkdir = "2"
chrono = { version = "0.4", features = ["std"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
